generate subkompetensi api doc
